--- a/classif.ipynb
+++ b/classif.ipynb
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
        "4  allen-p/_sent_mail/1001.  Message-ID: <30922949.1075863688243.JavaMail.e..."
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,23 +484,176 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'explode'",
+     "evalue": "'Series' object has no attribute 'split'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[18], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m ten_enron[\u001b[39m'\u001b[39;49m\u001b[39mmessage\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39;49mstr\u001b[39m.\u001b[39;49msplit(\u001b[39m\"\u001b[39;49m\u001b[39m\\n\u001b[39;49;00m\u001b[39m\\n\u001b[39;49;00m\u001b[39m\"\u001b[39;49m, n\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m)[\u001b[39m1\u001b[39;49m]\u001b[39m.\u001b[39;49mexplode()\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'explode'"
+      "\u001b[0;32m/tmp/ipykernel_2399/2641577255.py\u001b[0m in \u001b[0;36m?\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mten_enron\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'message'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\n\\n\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexplode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5985\u001b[0m             \u001b[0;32mand\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_accessors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5986\u001b[0m             \u001b[0;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5987\u001b[0m         ):\n\u001b[1;32m   5988\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5989\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Series' object has no attribute 'split'"
      ]
     }
    ],
    "source": [
-    "ten_enron['message'].str.split(\"\\n\\n\", n=1)[1].explode()"
+    "# ten_enron['message'].str[1].split(\"\\n\\n\", n=1)[1].explode()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         Message-ID: <18782981.1075855378110.JavaMail.e...\n",
+       "0                                 Here is our forecast\\n\\n \n",
+       "1         Message-ID: <15464986.1075855378456.JavaMail.e...\n",
+       "1         Traveling to have a business meeting takes the...\n",
+       "2         Message-ID: <24216240.1075855687451.JavaMail.e...\n",
+       "                                ...                        \n",
+       "517398    2\\n\\n -----Original Message-----\\nFrom: \\tDouc...\n",
+       "517399    Message-ID: <22052556.1075842030013.JavaMail.e...\n",
+       "517399    Analyst\\t\\t\\t\\t\\tRank\\n\\nStephane Brodeur\\t\\t\\...\n",
+       "517400    Message-ID: <28618979.1075842030037.JavaMail.e...\n",
+       "517400    i think the YMCA has a class that is for peopl...\n",
+       "Name: message, Length: 1034802, dtype: object"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfEnronFull['message'].str.split(\"\\n\\n\", n=1).explode()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"Message-ID: <15464986.1075855378456.JavaMail.evans@thyme>\\nDate: Fri, 4 May 2001 13:51:00 -0700 (PDT)\\nFrom: phillip.allen@enron.com\\nTo: john.lavorato@enron.com\\nSubject: Re:\\nMime-Version: 1.0\\nContent-Type: text/plain; charset=us-ascii\\nContent-Transfer-Encoding: 7bit\\nX-From: Phillip K Allen\\nX-To: John J Lavorato <John J Lavorato/ENRON@enronXgate@ENRON>\\nX-cc: \\nX-bcc: \\nX-Folder: \\\\Phillip_Allen_Jan2002_1\\\\Allen, Phillip K.\\\\'Sent Mail\\nX-Origin: Allen-P\\nX-FileName: pallen (Non-Privileged).pst\",\n",
+       " \"Traveling to have a business meeting takes the fun out of the trip.  Especially if you have to prepare a presentation.  I would suggest holding the business plan meetings here then take a trip without any formal business meetings.  I would even try and get some honest opinions on whether a trip is even desired or necessary.\\n\\nAs far as the business meetings, I think it would be more productive to try and stimulate discussions across the different groups about what is working and what is not.  Too often the presenter speaks and the others are quiet just waiting for their turn.   The meetings might be better if held in a round table discussion format.  \\n\\nMy suggestion for where to go is Austin.  Play golf and rent a ski boat and jet ski's.  Flying somewhere takes too much time.\\n\"]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfEnronFull['message'].str.split(\"\\n\\n\", n=1)[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         [Message-ID: <18782981.1075855378110.JavaMail....\n",
+       "1         [Message-ID: <15464986.1075855378456.JavaMail....\n",
+       "2         [Message-ID: <24216240.1075855687451.JavaMail....\n",
+       "3         [Message-ID: <13505866.1075863688222.JavaMail....\n",
+       "4         [Message-ID: <30922949.1075863688243.JavaMail....\n",
+       "                                ...                        \n",
+       "517396    [Message-ID: <26807948.1075842029936.JavaMail....\n",
+       "517397    [Message-ID: <25835861.1075842029959.JavaMail....\n",
+       "517398    [Message-ID: <28979867.1075842029988.JavaMail....\n",
+       "517399    [Message-ID: <22052556.1075842030013.JavaMail....\n",
+       "517400    [Message-ID: <28618979.1075842030037.JavaMail....\n",
+       "Name: message, Length: 517401, dtype: object"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfEnronFull['message'].str.split(\"\\n\\n\", n=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         Message-ID: <18782981.1075855378110.JavaMail.e...\n",
+       "0                                 Here is our forecast\\n\\n \n",
+       "1         Message-ID: <15464986.1075855378456.JavaMail.e...\n",
+       "1         Traveling to have a business meeting takes the...\n",
+       "2         Message-ID: <24216240.1075855687451.JavaMail.e...\n",
+       "                                ...                        \n",
+       "517398    2\\n\\n -----Original Message-----\\nFrom: \\tDouc...\n",
+       "517399    Message-ID: <22052556.1075842030013.JavaMail.e...\n",
+       "517399    Analyst\\t\\t\\t\\t\\tRank\\n\\nStephane Brodeur\\t\\t\\...\n",
+       "517400    Message-ID: <28618979.1075842030037.JavaMail.e...\n",
+       "517400    i think the YMCA has a class that is for peopl...\n",
+       "Name: message, Length: 1034802, dtype: object"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfEnronFull['message'].str.split(\"\\n\\n\", n=1).explode()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                                 Here is our forecast\\n\\n \n",
+       "1         Traveling to have a business meeting takes the...\n",
+       "2                            test successful.  way to go!!!\n",
+       "3         Randy,\\n\\n Can you send me a schedule of the s...\n",
+       "4                       Let's shoot for Tuesday at 11:45.  \n",
+       "                                ...                        \n",
+       "517396    This is a trade with OIL-SPEC-HEDGE-NG (John L...\n",
+       "517397    Some of my position is with the Alberta Term b...\n",
+       "517398    2\\n\\n -----Original Message-----\\nFrom: \\tDouc...\n",
+       "517399    Analyst\\t\\t\\t\\t\\tRank\\n\\nStephane Brodeur\\t\\t\\...\n",
+       "517400    i think the YMCA has a class that is for peopl...\n",
+       "Name: message, Length: 517401, dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfEnronFull['message'].str.split(\"\\n\\n\", n=1).str[1]"
    ]
   },
   {
